[gd_scene load_steps=3 format=3 uid="uid://233quw6ftjqa"]

[ext_resource type="Script" path="res://Elements/function/options_menu.gd" id="1_aepko"]
[ext_resource type="Theme" uid="uid://qpcg0ktiqy0j" path="res://Art/materials/theme.tres" id="1_ir0ne"]

[node name="OptionsMenu" type="Control"]
process_mode = 3
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ir0ne")
script = ExtResource("1_aepko")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.552941)

[node name="ScrollBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.5
offset_top = -180.0
offset_right = 92.5
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.447059, 0.0745098, 0, 0.360784)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -125.0
offset_right = 87.5
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="Video Label" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "- Video -"
horizontal_alignment = 1

[node name="FullscreenButton" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="Empty" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "                        "
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
offset_left = 75.0
offset_top = 10.0
offset_right = 134.0
offset_bottom = 31.0
text = "BACK"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/FullscreenButton" to="." method="_on_windowed_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
